# media-manager-interfaces

./: CMakeLists.txt
fidl/org/genivi/MediaManager/: Browser.fidl  PlayerTypes.fidl
src-gen/org/genivi/mediamanager/: Browser.h  BrowserDBusProxy.cpp  BrowserDBusProxy.h  BrowserDBusStubAdapter.cpp  BrowserDBusStubAdapter.h  BrowserProxy.h  BrowserProxyBase.h  BrowserStub.h  BrowserStubDefault.cpp  BrowserStubDefault.h  BrowserTypes.cpp  BrowserTypes.h  Indexer.h  IndexerDBusProxy.cpp  IndexerDBusProxy.h  IndexerDBusStubAdapter.cpp  IndexerDBusStubAdapter.h  IndexerProxy.h  IndexerProxyBase.h  IndexerStub.h  IndexerStubDefault.cpp  IndexerStubDefault.h  MediaTypes.h  Player.h  PlayerDBusProxy.cpp  PlayerDBusProxy.h  PlayerDBusStubAdapter.cpp  PlayerDBusStubAdapter.h  PlayerProxy.h  PlayerProxyBase.h  PlayerStub.h  PlayerStubDefault.cpp  PlayerStubDefault.h  PlayerTypes.h
